@@ -78,58 +78,6 @@
 		<url-pattern>/ontmdService</url-pattern>
 	</servlet-mapping>
 
-	<!-- 
-	<servlet>
-		<servlet-name>voc2rdfService</servlet-name>
-		<servlet-class>org.mmisw.ontmd.gwt.server.voc2rdf.Voc2RdfServiceImpl</servlet-class>
-		
-		<init-param>
-			<param-name>ontmd.app.version</param-name>
-			<param-value>@ontmd.app.version@</param-value>
-		</init-param>
-		<init-param>
-			<param-name>ontmd.app.build</param-name>
-			<param-value>@ontmd.app.build@</param-value>
-		</init-param>
-		
-		<init-param>
-			<param-name>ontmd.pre.uploads.dir</param-name>
-			<param-value>@ontmd.pre.uploads.dir@</param-value>
-		</init-param>
-		
-		<init-param>
-			<param-name>ontmd.voc2rdf.dir</param-name>
-			<param-value>@ontmd.voc2rdf.dir@</param-value>
-		</init-param>
-		
-		<init-param>
-			<param-name>ontmd.preview.dir</param-name>
-			<param-value>@ontmd.preview.dir@</param-value>
-		</init-param>
-		
-		<init-param>
-			<param-name>ontmd.resource.dir</param-name>
-			<param-value>@ontmd.resource.dir@</param-value>
-		</init-param>
-		
-		<init-param>
-			<param-name>ontmd.resourcetype.class</param-name>
-			<param-value>@ontmd.resourcetype.class@</param-value>
-		</init-param>
-		
-		<init-param>
-			<param-name>ontmd.authority.class</param-name>
-			<param-value>@ontmd.authority.class@</param-value>
-		</init-param>
-
-		<load-on-startup>2</load-on-startup>
-	</servlet>
-	
-	<servlet-mapping>
-		<servlet-name>voc2rdfService</servlet-name>
-		<url-pattern>/voc2rdfService</url-pattern>
-	</servlet-mapping>
-	-->
 
 	<servlet>
 		<servlet-name>upload</servlet-name>
